Bug 962241 - don't spam error messages about ContractIDToCID failing; r=bholley